# oop_4laba

./: CMakeLists.txt  README.md
include/: Array.h  Array.ipp  Figure.h  Figure.ipp  Pentagon.h  Pentagon.ipp  Point.h  Point.ipp  Rhombus.h  Rhombus.ipp  Trapezoid.h  Trapezoid.ipp
src/: main.cpp
test/: array_test.cpp  figure_test.cpp
